Fondo del Conversor y Panel

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=TP3GUI_Ej2
-main.class=tp3gui_ej2.TP3GUI_Ej2
+main.class=Ejercicio2.ConversorDeTemperatura
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
